--- a/cmd/lab2/lab2.ipynb
+++ b/cmd/lab2/lab2.ipynb
@@ -23,7 +23,11 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import (\n",
@@ -51,7 +55,11 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "// Print a matrix in a nice format\n",
@@ -207,7 +215,11 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "// Solve a linear system of equations using least squares\n",
@@ -250,7 +262,11 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "// Perform polynomial interpolation to find the coefficients of the polynomial\n",
@@ -322,7 +338,7 @@
     "\n",
     "We apply least of squares to fit a curve on the form \n",
     "\n",
-    "$f(X_{n}) = aX+bX^{2}\n",
+    "$f(X_{n}) = aX+bX^{2}$\n",
     "\n",
     "to the data points provided. Then we can calculate the error with RMSE which is done below.\n",
     "\n",
@@ -332,7 +348,11 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -401,7 +421,11 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "// Data points\n",
@@ -427,7 +451,11 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -478,13 +506,17 @@
     "\n",
     "Which we can rewrite as:\n",
     "\n",
-    "$ln(8-U(x)) = ln(a) - bln(x)$"
+    "$ln(8-U(x)) = ln(a) + bln(x)$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 210,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -537,7 +569,11 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -611,7 +647,11 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -653,7 +693,11 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -692,7 +736,11 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -865,18 +913,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Go",
-   "language": "go",
-   "name": "gophernotes"
-  },
-  "language_info": {
-   "codemirror_mode": "",
-   "file_extension": ".go",
-   "mimetype": "",
-   "name": "go",
-   "nbconvert_exporter": "",
-   "pygments_lexer": "",
-   "version": "go1.11.4"
+   "display_name": "PyCharm (hedvig)",
+   "language": "python",
+   "name": "pycharm-418fd98a"
   },
   "orig_nbformat": 4
  },
